new huoban update

--- a/demo1.html
+++ b/demo1.html
@@ -12,9 +12,8 @@
     }
   </style>
 </head>
-
 <body>
-  <div id="root">我是你爸爸git</div>
+  <div id="root">我是你爸爸git 我是新加入的合作伙伴</div>
   <script src="./drag.js"></script>
 </body>
 
