--- a/demo1.html
+++ b/demo1.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <div id="root">我是你爸爸git 我是新加入的合作伙伴</div>
+  <div id="root">我是你爸爸git 我是新加入的合作伙伴sss</div>
   <script src="./drag.js"></script>
 </body>
 
