qingang 又再一次更新代码

--- a/demo1.html
+++ b/demo1.html
@@ -9,7 +9,7 @@
   <style>
     #root {
       color: red;
-      background: yellow;
+      background: blue;
       font-size: 18px;
       border: 1px solid red;
     }
