--- a/demo1.html
+++ b/demo1.html
@@ -19,6 +19,7 @@
 <body>
   <div id="root">我是你爸爸git 我是新加入的合作伙伴sss</div>
   <div id="tet">新增加的测试git</div>
+  <div id="tet">新增加的测试git2222</div>
   <script src="./drag.js"></script>
 </body>
 
