--- a/demo1.html
+++ b/demo1.html
@@ -8,7 +8,7 @@
   <title>Document</title>
   <style>
     #root {
-      color: red;
+      color: #000;
       background: yellow;
       font-size: 18px;
       border: 1px solid red;
