qingang 又再一次更新代码

--- a/demo1.html
+++ b/demo1.html
@@ -8,7 +8,7 @@
   <title>Document</title>
   <style>
     #root {
-      color: #ccc;
+      color: #999;
       background: yellow;
       font-size: 18px;
       border: 1px solid red;
