--- a/demo1.html
+++ b/demo1.html
@@ -8,7 +8,7 @@
   <title>Document</title>
   <style>
     #root {
-      color: #999;
+      color: rgb(47, 155, 71);
       background: yellow;
       font-size: 18px;
       border: 1px solid red;
