--- a/demo1.html
+++ b/demo1.html
@@ -12,7 +12,7 @@
       background: yellow;
       font-size: 18px;
       border: 1px solid red;
-      display: flex;
+      display: none;
     }
   </style>
 </head>
