--- a/demo1.html
+++ b/demo1.html
@@ -13,6 +13,7 @@
       font-size: 18px;
       border: 1px solid red;
       display: block;
+      text-decoration: navajowhite;
     }
   </style>
 </head>
