qingang 又再一次更新代码

--- a/demo1.html
+++ b/demo1.html
@@ -16,6 +16,9 @@
       display: block;
       text-decoration: navajowhite;
     }
+    body {
+      color: #ccc;
+    }
   </style>
 </head>
 <body>
