--- a/demo1.html
+++ b/demo1.html
@@ -15,6 +15,7 @@
       display: none;
       display: block;
       text-decoration: navajowhite;
+      position: absolute;
     }
   </style>
 </head>
