--- a/demo1.html
+++ b/demo1.html
@@ -16,6 +16,7 @@
       display: block;
       text-decoration: navajowhite;
       position: absolute;
+      text-align-last: center;
     }
   </style>
 </head>
